# pythonProjectWeb

./: .gitignore  README.md  catalog.html  catalog_fixture.json  category.html  contact.html  get_open.py  main.html  main_3.html  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/includes/: inc_menu.html
catalog/: admin.py  form.py  models.py  urls.py  views.py
catalog/management/commands/: add_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_description_and_more.py  0002_alter_product_category.py  0003_alter_product_picture.py
catalog/templates/: base.html
catalog/templates/catalog/: contact.html  contact_success.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
