[project]
name = "pythonprojectweb"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktory",email = "mokshan.os@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "django (>=5.2.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
